OOB: fix css glitch when text of search in account browser was too long

--- a/src/apps/core/style/app.scss
+++ b/src/apps/core/style/app.scss
@@ -286,6 +286,7 @@ body,
 	color: #c0c0c9;
 	padding: 10px 12px 0px 12px;
 	position: relative;
+	width: 198px;
 }
 .core-topbar #main_topbar_account_toggle_container .current-account-label {
 	font-size: 12px;
@@ -297,6 +298,8 @@ body,
 .core-topbar #main_topbar_account_toggle_container .missing-info {
 	color: #909099;
 	font-style: italic;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .core-topbar #main_topbar_account_toggle_container .home-account-link {
